// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`paragraph a valid link reference 1`] = `
[
  {
    "indent": 0,
    "raw": "this is [google] link",
    "tokens": [
      {
        "raw": "this is ",
        "type": "text",
        "value": "this is ",
      },
      {
        "raw": "[google]",
        "tokens": {
          "href": "https://google.com",
          "title": {
            "raw": "google",
            "tokens": [
              {
                "raw": "google",
                "type": "text",
                "value": "google",
              },
            ],
          },
          "tooltip": undefined,
        },
        "type": "link",
      },
      {
        "raw": " link",
        "type": "text",
        "value": " link",
      },
    ],
    "type": "paragraph",
    "value": "this is [google] link",
  },
]
`;

exports[`paragraph a valid link reference with text 1`] = `
[
  {
    "indent": 0,
    "raw": "this is [toggle][google] link",
    "tokens": [
      {
        "raw": "this is ",
        "type": "text",
        "value": "this is ",
      },
      {
        "raw": "[toggle][google]",
        "tokens": {
          "href": "https://google.com",
          "title": {
            "raw": "toggle",
            "tokens": [
              {
                "raw": "toggle",
                "type": "text",
                "value": "toggle",
              },
            ],
          },
          "tooltip": undefined,
        },
        "type": "link",
      },
      {
        "raw": " link",
        "type": "text",
        "value": " link",
      },
    ],
    "type": "paragraph",
    "value": "this is [toggle][google] link",
  },
]
`;

exports[`paragraph should allow escaped escape character 1`] = `
[
  {
    "indent": 0,
    "raw": "this is \`go\\ogle\` link",
    "tokens": [
      {
        "raw": "this is ",
        "type": "text",
        "value": "this is ",
      },
      {
        "raw": "\`go\\ogle\`",
        "type": "code",
        "value": "go\\ogle",
      },
      {
        "raw": " link",
        "type": "text",
        "value": " link",
      },
    ],
    "type": "paragraph",
    "value": "this is \`go\\ogle\` link",
  },
]
`;

exports[`paragraph should be deep tokenized: a ****bold**** text 1`] = `
[
  {
    "indent": 0,
    "raw": "a ****bold**** text",
    "tokens": [
      {
        "raw": "a ",
        "type": "text",
        "value": "a ",
      },
      {
        "raw": "****bold****",
        "tokens": [
          {
            "raw": "bold",
            "type": "text",
            "value": "bold",
          },
        ],
        "type": "bold",
      },
      {
        "raw": " text",
        "type": "text",
        "value": " text",
      },
    ],
    "type": "paragraph",
    "value": "a ****bold**** text",
  },
]
`;

exports[`paragraph should be deep tokenized: a **bold and *italics* text** 1`] = `
[
  {
    "indent": 0,
    "raw": "a **bold and *italics* text**",
    "tokens": [
      {
        "raw": "a ",
        "type": "text",
        "value": "a ",
      },
      {
        "raw": "**bold and *italics* text**",
        "tokens": [
          {
            "raw": "bold and ",
            "type": "text",
            "value": "bold and ",
          },
          {
            "raw": "*italics*",
            "tokens": [
              {
                "raw": "italics",
                "type": "text",
                "value": "italics",
              },
            ],
            "type": "italic",
          },
          {
            "raw": " text",
            "type": "text",
            "value": " text",
          },
        ],
        "type": "bold",
      },
    ],
    "type": "paragraph",
    "value": "a **bold and *italics* text**",
  },
]
`;

exports[`paragraph should be deep tokenized: a **bold** text 1`] = `
[
  {
    "indent": 0,
    "raw": "a **bold** text",
    "tokens": [
      {
        "raw": "a ",
        "type": "text",
        "value": "a ",
      },
      {
        "raw": "**bold**",
        "tokens": [
          {
            "raw": "bold",
            "type": "text",
            "value": "bold",
          },
        ],
        "type": "bold",
      },
      {
        "raw": " text",
        "type": "text",
        "value": " text",
      },
    ],
    "type": "paragraph",
    "value": "a **bold** text",
  },
]
`;

exports[`paragraph should be deep tokenized: a ~~~~strike~~~~~~~ here 1`] = `
[
  {
    "indent": 0,
    "raw": "a ~~~~strike~~~~~~~ here",
    "tokens": [
      {
        "raw": "a ",
        "type": "text",
        "value": "a ",
      },
      {
        "raw": "~~~~strike~~~~",
        "tokens": [
          {
            "raw": "strike",
            "type": "text",
            "value": "strike",
          },
        ],
        "type": "strike-through",
      },
      {
        "raw": "~~~ here",
        "type": "text",
        "value": "~~~ here",
      },
    ],
    "type": "paragraph",
    "value": "a ~~~~strike~~~~~~~ here",
  },
]
`;

exports[`paragraph should be deep tokenized: a clean [link](http://localhost 'tooltip') is here 1`] = `
[
  {
    "indent": 0,
    "raw": "a clean [link](http://localhost 'tooltip') is here",
    "tokens": [
      {
        "raw": "a clean ",
        "type": "text",
        "value": "a clean ",
      },
      {
        "raw": "[link](http://localhost 'tooltip')",
        "tokens": {
          "href": "http://localhost",
          "title": {
            "raw": "link",
            "tokens": [
              {
                "raw": "link",
                "type": "text",
                "value": "link",
              },
            ],
          },
          "tooltip": "tooltip",
        },
        "type": "link",
      },
      {
        "raw": " is here",
        "type": "text",
        "value": " is here",
      },
    ],
    "type": "paragraph",
    "value": "a clean [link](http://localhost 'tooltip') is here",
  },
]
`;

exports[`paragraph should be deep tokenized: a link [with **bold** text](https://seeme) lets see 1`] = `
[
  {
    "indent": 0,
    "raw": "a link [with **bold** text](https://seeme) lets see",
    "tokens": [
      {
        "raw": "a link ",
        "type": "text",
        "value": "a link ",
      },
      {
        "raw": "[with **bold** text](https://seeme)",
        "tokens": {
          "href": "https://seeme",
          "title": {
            "raw": "with **bold** text",
            "tokens": [
              {
                "raw": "with ",
                "type": "text",
                "value": "with ",
              },
              {
                "raw": "**bold**",
                "tokens": [
                  {
                    "raw": "bold",
                    "type": "text",
                    "value": "bold",
                  },
                ],
                "type": "bold",
              },
              {
                "raw": " text",
                "type": "text",
                "value": " text",
              },
            ],
          },
          "tooltip": undefined,
        },
        "type": "link",
      },
      {
        "raw": " lets see",
        "type": "text",
        "value": " lets see",
      },
    ],
    "type": "paragraph",
    "value": "a link [with **bold** text](https://seeme) lets see",
  },
]
`;

exports[`paragraph should be deep tokenized: a paragraph of <u>words</u> \`first code\` normal text here \`code body\` *first italics* here me crying *italic body* here me crying **first bolds** some normal again **bold body** [Kiran Parajuli](https://kiranparajuli.com.np) ~~strikes body~~ here some 1`] = `
[
  {
    "indent": 0,
    "raw": "a paragraph of <u>words</u> \`first code\` normal text here \`code body\` *first italics* here me crying *italic body* here me crying **first bolds** some normal again **bold body** [Kiran Parajuli](https://kiranparajuli.com.np) ~~strikes body~~ here some",
    "tokens": [
      {
        "raw": "a paragraph of ",
        "type": "text",
        "value": "a paragraph of ",
      },
      {
        "raw": "<u>",
        "tokens": {
          "attributes": undefined,
          "isEndTag": false,
          "tag": "u",
        },
        "type": "html",
      },
      {
        "raw": "words",
        "type": "text",
        "value": "words",
      },
      {
        "raw": "</u>",
        "tokens": {
          "attributes": undefined,
          "isEndTag": true,
          "tag": "u",
        },
        "type": "html",
      },
      {
        "raw": " ",
        "type": "text",
        "value": " ",
      },
      {
        "raw": "\`first code\`",
        "type": "code",
        "value": "first code",
      },
      {
        "raw": " normal text here ",
        "type": "text",
        "value": " normal text here ",
      },
      {
        "raw": "\`code body\`",
        "type": "code",
        "value": "code body",
      },
      {
        "raw": " ",
        "type": "text",
        "value": " ",
      },
      {
        "raw": "*first italics*",
        "tokens": [
          {
            "raw": "first italics",
            "type": "text",
            "value": "first italics",
          },
        ],
        "type": "italic",
      },
      {
        "raw": " here me crying ",
        "type": "text",
        "value": " here me crying ",
      },
      {
        "raw": "*italic body*",
        "tokens": [
          {
            "raw": "italic body",
            "type": "text",
            "value": "italic body",
          },
        ],
        "type": "italic",
      },
      {
        "raw": " here me crying ",
        "type": "text",
        "value": " here me crying ",
      },
      {
        "raw": "**first bolds**",
        "tokens": [
          {
            "raw": "first bolds",
            "type": "text",
            "value": "first bolds",
          },
        ],
        "type": "bold",
      },
      {
        "raw": " some normal again ",
        "type": "text",
        "value": " some normal again ",
      },
      {
        "raw": "**bold body**",
        "tokens": [
          {
            "raw": "bold body",
            "type": "text",
            "value": "bold body",
          },
        ],
        "type": "bold",
      },
      {
        "raw": " ",
        "type": "text",
        "value": " ",
      },
      {
        "raw": "[Kiran Parajuli](https://kiranparajuli.com.np)",
        "tokens": {
          "href": "https://kiranparajuli.com.np",
          "title": {
            "raw": "Kiran Parajuli",
            "tokens": [
              {
                "raw": "Kiran Parajuli",
                "type": "text",
                "value": "Kiran Parajuli",
              },
            ],
          },
          "tooltip": undefined,
        },
        "type": "link",
      },
      {
        "raw": " ",
        "type": "text",
        "value": " ",
      },
      {
        "raw": "~~strikes body~~",
        "tokens": [
          {
            "raw": "strikes body",
            "type": "text",
            "value": "strikes body",
          },
        ],
        "type": "strike-through",
      },
      {
        "raw": " here some",
        "type": "text",
        "value": " here some",
      },
    ],
    "type": "paragraph",
    "value": "a paragraph of <u>words</u> \`first code\` normal text here \`code body\` *first italics* here me crying *italic body* here me crying **first bolds** some normal again **bold body** [Kiran Parajuli](https://kiranparajuli.com.np) ~~strikes body~~ here some",
  },
]
`;

exports[`paragraph should be deep tokenized: an ***italics*** text 1`] = `
[
  {
    "indent": 0,
    "raw": "an ***italics*** text",
    "tokens": [
      {
        "raw": "an ",
        "type": "text",
        "value": "an ",
      },
      {
        "raw": "***italics***",
        "tokens": [
          {
            "raw": "italics",
            "type": "text",
            "value": "italics",
          },
        ],
        "type": "italic",
      },
      {
        "raw": " text",
        "type": "text",
        "value": " text",
      },
    ],
    "type": "paragraph",
    "value": "an ***italics*** text",
  },
]
`;

exports[`paragraph should be deep tokenized: an *italics and **bold** text* here 1`] = `
[
  {
    "indent": 0,
    "raw": "an *italics and **bold** text* here",
    "tokens": [
      {
        "raw": "an ",
        "type": "text",
        "value": "an ",
      },
      {
        "raw": "*italics and **bold** text*",
        "tokens": [
          {
            "raw": "italics and ",
            "type": "text",
            "value": "italics and ",
          },
          {
            "raw": "**bold**",
            "tokens": [
              {
                "raw": "bold",
                "type": "text",
                "value": "bold",
              },
            ],
            "type": "bold",
          },
          {
            "raw": " text",
            "type": "text",
            "value": " text",
          },
        ],
        "type": "italic",
      },
      {
        "raw": " here",
        "type": "text",
        "value": " here",
      },
    ],
    "type": "paragraph",
    "value": "an *italics and **bold** text* here",
  },
]
`;

exports[`paragraph should be deep tokenized: an *italics with\\* asterisk* inside 1`] = `
[
  {
    "indent": 0,
    "raw": "an *italics with\\* asterisk* inside",
    "tokens": [
      {
        "raw": "an ",
        "type": "text",
        "value": "an ",
      },
      {
        "raw": "*italics with\\* asterisk*",
        "tokens": [
          {
            "raw": "italics with\\* asterisk",
            "type": "text",
            "value": "italics with\\* asterisk",
          },
        ],
        "type": "italic",
      },
      {
        "raw": " inside",
        "type": "text",
        "value": " inside",
      },
    ],
    "type": "paragraph",
    "value": "an *italics with\\* asterisk* inside",
  },
]
`;

exports[`paragraph should be deep tokenized: an *italics* text 1`] = `
[
  {
    "indent": 0,
    "raw": "an *italics* text",
    "tokens": [
      {
        "raw": "an ",
        "type": "text",
        "value": "an ",
      },
      {
        "raw": "*italics*",
        "tokens": [
          {
            "raw": "italics",
            "type": "text",
            "value": "italics",
          },
        ],
        "type": "italic",
      },
      {
        "raw": " text",
        "type": "text",
        "value": " text",
      },
    ],
    "type": "paragraph",
    "value": "an *italics* text",
  },
]
`;

exports[`paragraph should be deep tokenized: an empty [link] reference is here 1`] = `
[
  {
    "indent": 0,
    "raw": "an empty [link] reference is here",
    "tokens": [
      {
        "raw": "an empty [link] reference is here",
        "type": "text",
        "value": "an empty [link] reference is here",
      },
    ],
    "type": "paragraph",
    "value": "an empty [link] reference is here",
  },
]
`;

exports[`paragraph should be deep tokenized: beautiful ![image](link 'one' 50 60) is here now. 1`] = `
[
  {
    "indent": 0,
    "raw": "beautiful ![image](link 'one' 50 60) is here now.",
    "tokens": [
      {
        "raw": "beautiful ",
        "type": "text",
        "value": "beautiful ",
      },
      {
        "raw": "![image](link 'one' 50 60)",
        "tokens": {
          "alt": "image",
          "height": "60",
          "href": "link",
          "title": "one",
          "width": "50",
        },
        "type": "image",
      },
      {
        "raw": " is here now.",
        "type": "text",
        "value": " is here now.",
      },
    ],
    "type": "paragraph",
    "value": "beautiful ![image](link 'one' 50 60) is here now.",
  },
]
`;

exports[`paragraph should be deep tokenized: beautiful ![image](link 'one' 50) is here now. 1`] = `
[
  {
    "indent": 0,
    "raw": "beautiful ![image](link 'one' 50) is here now.",
    "tokens": [
      {
        "raw": "beautiful ",
        "type": "text",
        "value": "beautiful ",
      },
      {
        "raw": "![image](link 'one' 50)",
        "tokens": {
          "alt": "image",
          "height": undefined,
          "href": "link",
          "title": "one",
          "width": "50",
        },
        "type": "image",
      },
      {
        "raw": " is here now.",
        "type": "text",
        "value": " is here now.",
      },
    ],
    "type": "paragraph",
    "value": "beautiful ![image](link 'one' 50) is here now.",
  },
]
`;

exports[`paragraph should be deep tokenized: beautiful ![image](link 'one') is here now. 1`] = `
[
  {
    "indent": 0,
    "raw": "beautiful ![image](link 'one') is here now.",
    "tokens": [
      {
        "raw": "beautiful ",
        "type": "text",
        "value": "beautiful ",
      },
      {
        "raw": "![image](link 'one')",
        "tokens": {
          "alt": "image",
          "height": undefined,
          "href": "link",
          "title": "one",
          "width": undefined,
        },
        "type": "image",
      },
      {
        "raw": " is here now.",
        "type": "text",
        "value": " is here now.",
      },
    ],
    "type": "paragraph",
    "value": "beautiful ![image](link 'one') is here now.",
  },
]
`;

exports[`paragraph should be deep tokenized: beautiful ![image](link) is here now. 1`] = `
[
  {
    "indent": 0,
    "raw": "beautiful ![image](link) is here now.",
    "tokens": [
      {
        "raw": "beautiful ",
        "type": "text",
        "value": "beautiful ",
      },
      {
        "raw": "![image](link)",
        "tokens": {
          "alt": "image",
          "height": undefined,
          "href": "link",
          "title": undefined,
          "width": undefined,
        },
        "type": "image",
      },
      {
        "raw": " is here now.",
        "type": "text",
        "value": " is here now.",
      },
    ],
    "type": "paragraph",
    "value": "beautiful ![image](link) is here now.",
  },
]
`;

exports[`paragraph should be deep tokenized: but a link [kiran](https://kiran.me 'hero') with tooltip is very amazing 1`] = `
[
  {
    "indent": 0,
    "raw": "but a link [kiran](https://kiran.me 'hero') with tooltip is very amazing",
    "tokens": [
      {
        "raw": "but a link ",
        "type": "text",
        "value": "but a link ",
      },
      {
        "raw": "[kiran](https://kiran.me 'hero')",
        "tokens": {
          "href": "https://kiran.me",
          "title": {
            "raw": "kiran",
            "tokens": [
              {
                "raw": "kiran",
                "type": "text",
                "value": "kiran",
              },
            ],
          },
          "tooltip": "hero",
        },
        "type": "link",
      },
      {
        "raw": " with tooltip is very amazing",
        "type": "text",
        "value": " with tooltip is very amazing",
      },
    ],
    "type": "paragraph",
    "value": "but a link [kiran](https://kiran.me 'hero') with tooltip is very amazing",
  },
]
`;

exports[`paragraph should be deep tokenized: but will it \`find a **bold *and* italics** inside\` the code 1`] = `
[
  {
    "indent": 0,
    "raw": "but will it \`find a **bold *and* italics** inside\` the code",
    "tokens": [
      {
        "raw": "but will it ",
        "type": "text",
        "value": "but will it ",
      },
      {
        "raw": "\`find a **bold *and* italics** inside\`",
        "type": "code",
        "value": "find a **bold *and* italics** inside",
      },
      {
        "raw": " the code",
        "type": "text",
        "value": " the code",
      },
    ],
    "type": "paragraph",
    "value": "but will it \`find a **bold *and* italics** inside\` the code",
  },
]
`;

exports[`paragraph should be deep tokenized: checkout this _cool italics_ here 1`] = `
[
  {
    "indent": 0,
    "raw": "checkout this _cool italics_ here",
    "tokens": [
      {
        "raw": "checkout this ",
        "type": "text",
        "value": "checkout this ",
      },
      {
        "raw": "_cool italics_",
        "tokens": [
          {
            "raw": "cool italics",
            "type": "text",
            "value": "cool italics",
          },
        ],
        "type": "italic",
      },
      {
        "raw": " here",
        "type": "text",
        "value": " here",
      },
    ],
    "type": "paragraph",
    "value": "checkout this _cool italics_ here",
  },
]
`;

exports[`paragraph should be deep tokenized: how are ~~~strikes _in_ the~~~ _wonderland_ 1`] = `
[
  {
    "indent": 0,
    "raw": "how are ~~~strikes _in_ the~~~ _wonderland_",
    "tokens": [
      {
        "raw": "how are ~",
        "type": "text",
        "value": "how are ~",
      },
      {
        "raw": "~~strikes _in_ the~~",
        "tokens": [
          {
            "raw": "strikes ",
            "type": "text",
            "value": "strikes ",
          },
          {
            "raw": "_in_",
            "tokens": [
              {
                "raw": "in",
                "type": "text",
                "value": "in",
              },
            ],
            "type": "italic",
          },
          {
            "raw": " the",
            "type": "text",
            "value": " the",
          },
        ],
        "type": "strike-through",
      },
      {
        "raw": "~ ",
        "type": "text",
        "value": "~ ",
      },
      {
        "raw": "_wonderland_",
        "tokens": [
          {
            "raw": "wonderland",
            "type": "text",
            "value": "wonderland",
          },
        ],
        "type": "italic",
      },
    ],
    "type": "paragraph",
    "value": "how are ~~~strikes _in_ the~~~ _wonderland_",
  },
]
`;

exports[`paragraph should be deep tokenized: i ~~~am now~~~ unhappy 1`] = `
[
  {
    "indent": 0,
    "raw": "i ~~~am now~~~ unhappy",
    "tokens": [
      {
        "raw": "i ~",
        "type": "text",
        "value": "i ~",
      },
      {
        "raw": "~~am now~~",
        "tokens": [
          {
            "raw": "am now",
            "type": "text",
            "value": "am now",
          },
        ],
        "type": "strike-through",
      },
      {
        "raw": "~ unhappy",
        "type": "text",
        "value": "~ unhappy",
      },
    ],
    "type": "paragraph",
    "value": "i ~~~am now~~~ unhappy",
  },
]
`;

exports[`paragraph should be deep tokenized: lets check for \`a code\` inside and code \`\`with multiple\`\` ticks 1`] = `
[
  {
    "indent": 0,
    "raw": "lets check for \`a code\` inside and code \`\`with multiple\`\` ticks",
    "tokens": [
      {
        "raw": "lets check for ",
        "type": "text",
        "value": "lets check for ",
      },
      {
        "raw": "\`a code\`",
        "type": "code",
        "value": "a code",
      },
      {
        "raw": " inside and code ",
        "type": "text",
        "value": " inside and code ",
      },
      {
        "raw": "\`\`with multiple\`\`",
        "type": "code",
        "value": "with multiple",
      },
      {
        "raw": " ticks",
        "type": "text",
        "value": " ticks",
      },
    ],
    "type": "paragraph",
    "value": "lets check for \`a code\` inside and code \`\`with multiple\`\` ticks",
  },
]
`;

exports[`paragraph should be deep tokenized: new ~~~strike~~ with beauty 1`] = `
[
  {
    "indent": 0,
    "raw": "new ~~~strike~~ with beauty",
    "tokens": [
      {
        "raw": "new ~",
        "type": "text",
        "value": "new ~",
      },
      {
        "raw": "~~strike~~",
        "tokens": [
          {
            "raw": "strike",
            "type": "text",
            "value": "strike",
          },
        ],
        "type": "strike-through",
      },
      {
        "raw": " with beauty",
        "type": "text",
        "value": " with beauty",
      },
    ],
    "type": "paragraph",
    "value": "new ~~~strike~~ with beauty",
  },
]
`;

exports[`paragraph should be deep tokenized: no \\* mans \\* land 1`] = `
[
  {
    "indent": 0,
    "raw": "no \\* mans \\* land",
    "tokens": [
      {
        "raw": "no \\* mans \\* land",
        "type": "text",
        "value": "no \\* mans \\* land",
      },
    ],
    "type": "paragraph",
    "value": "no \\* mans \\* land",
  },
]
`;

exports[`paragraph should be deep tokenized: now **stars _in_ the** wonderland 1`] = `
[
  {
    "indent": 0,
    "raw": "now **stars _in_ the** wonderland",
    "tokens": [
      {
        "raw": "now ",
        "type": "text",
        "value": "now ",
      },
      {
        "raw": "**stars _in_ the**",
        "tokens": [
          {
            "raw": "stars ",
            "type": "text",
            "value": "stars ",
          },
          {
            "raw": "_in_",
            "tokens": [
              {
                "raw": "in",
                "type": "text",
                "value": "in",
              },
            ],
            "type": "italic",
          },
          {
            "raw": " the",
            "type": "text",
            "value": " the",
          },
        ],
        "type": "bold",
      },
      {
        "raw": " wonderland",
        "type": "text",
        "value": " wonderland",
      },
    ],
    "type": "paragraph",
    "value": "now **stars _in_ the** wonderland",
  },
]
`;

exports[`paragraph should be deep tokenized: now with __underlined text__ within some ___underlined_text___ 1`] = `
[
  {
    "indent": 0,
    "raw": "now with __underlined text__ within some ___underlined_text___",
    "tokens": [
      {
        "raw": "now with ",
        "type": "text",
        "value": "now with ",
      },
      {
        "raw": "__underlined text__",
        "tokens": [
          {
            "raw": "underlined text",
            "type": "text",
            "value": "underlined text",
          },
        ],
        "type": "bold",
      },
      {
        "raw": " within some ",
        "type": "text",
        "value": " within some ",
      },
      {
        "raw": "___underlined_text___",
        "tokens": [
          {
            "raw": "underlined_text",
            "type": "text",
            "value": "underlined_text",
          },
        ],
        "type": "italic",
      },
    ],
    "type": "paragraph",
    "value": "now with __underlined text__ within some ___underlined_text___",
  },
]
`;

exports[`paragraph should be deep tokenized: pool of a ~~~~~~~~strike~~~~~~~ 1`] = `
[
  {
    "indent": 0,
    "raw": "pool of a ~~~~~~~~strike~~~~~~~",
    "tokens": [
      {
        "raw": "pool of a ~~",
        "type": "text",
        "value": "pool of a ~~",
      },
      {
        "raw": "~~~~~~strike~~~~~~",
        "tokens": [
          {
            "raw": "strike",
            "type": "text",
            "value": "strike",
          },
        ],
        "type": "strike-through",
      },
      {
        "raw": "~",
        "type": "text",
        "value": "~",
      },
    ],
    "type": "paragraph",
    "value": "pool of a ~~~~~~~~strike~~~~~~~",
  },
]
`;

exports[`paragraph should be deep tokenized: some normal and **bold with * gem** but pure *italics* is alos there baby now ~~coming~~hola amigos~~strike~~ wooo lala what about blazing *********here baby ~~~~~~~~~baby \`baby\`\`\` 1`] = `
[
  {
    "indent": 0,
    "raw": "some normal and **bold with * gem** but pure *italics* is alos there baby now ~~coming~~hola amigos~~strike~~ wooo lala what about blazing *********here baby ~~~~~~~~~baby \`baby\`\`\`",
    "tokens": [
      {
        "raw": "some normal and ",
        "type": "text",
        "value": "some normal and ",
      },
      {
        "raw": "**bold with * gem**",
        "tokens": [
          {
            "raw": "bold with * gem",
            "type": "text",
            "value": "bold with * gem",
          },
        ],
        "type": "bold",
      },
      {
        "raw": " but pure ",
        "type": "text",
        "value": " but pure ",
      },
      {
        "raw": "*italics*",
        "tokens": [
          {
            "raw": "italics",
            "type": "text",
            "value": "italics",
          },
        ],
        "type": "italic",
      },
      {
        "raw": " is alos there baby now ",
        "type": "text",
        "value": " is alos there baby now ",
      },
      {
        "raw": "~~coming~~",
        "tokens": [
          {
            "raw": "coming",
            "type": "text",
            "value": "coming",
          },
        ],
        "type": "strike-through",
      },
      {
        "raw": "hola amigos",
        "type": "text",
        "value": "hola amigos",
      },
      {
        "raw": "~~strike~~",
        "tokens": [
          {
            "raw": "strike",
            "type": "text",
            "value": "strike",
          },
        ],
        "type": "strike-through",
      },
      {
        "raw": " wooo lala what about blazing *********here baby ~~~~~~~~~baby \`baby\`\`\`",
        "type": "text",
        "value": " wooo lala what about blazing *********here baby ~~~~~~~~~baby \`baby\`\`\`",
      },
    ],
    "type": "paragraph",
    "value": "some normal and **bold with * gem** but pure *italics* is alos there baby now ~~coming~~hola amigos~~strike~~ wooo lala what about blazing *********here baby ~~~~~~~~~baby \`baby\`\`\`",
  },
]
`;

exports[`paragraph should be separated with other tokens 1`] = `
[
  {
    "indent": 0,
    "raw": "abc",
    "tokens": [
      {
        "raw": "abc",
        "type": "text",
        "value": "abc",
      },
    ],
    "type": "paragraph",
    "value": "abc",
  },
  {
    "indent": 0,
    "level": 1,
    "raw": "# one",
    "setext": false,
    "tokens": [
      {
        "raw": "one",
        "type": "text",
        "value": "one",
      },
    ],
    "type": "heading",
    "value": "one",
  },
  {
    "indent": 0,
    "raw": "def",
    "tokens": [
      {
        "raw": "def",
        "type": "text",
        "value": "def",
      },
    ],
    "type": "paragraph",
    "value": "def",
  },
]
`;

exports[`paragraph should detect html in the paragraph 1`] = `
[
  {
    "indent": 0,
    "raw": "this is a link <a href='https://google.com'>google</a> here",
    "tokens": [
      {
        "raw": "this is a link ",
        "type": "text",
        "value": "this is a link ",
      },
      {
        "raw": "<a href='https://google.com'>",
        "tokens": {
          "attributes": "href='https://google.com'",
          "isEndTag": false,
          "tag": "a",
        },
        "type": "html",
      },
      {
        "raw": "google",
        "type": "text",
        "value": "google",
      },
      {
        "raw": "</a>",
        "tokens": {
          "attributes": undefined,
          "isEndTag": true,
          "tag": "a",
        },
        "type": "html",
      },
      {
        "raw": " here",
        "type": "text",
        "value": " here",
      },
    ],
    "type": "paragraph",
    "value": "this is a link <a href='https://google.com'>google</a> here",
  },
  {
    "type": "new-line",
  },
  {
    "indent": 0,
    "raw": "this is a <u>underlined</u> text here",
    "tokens": [
      {
        "raw": "this is a ",
        "type": "text",
        "value": "this is a ",
      },
      {
        "raw": "<u>",
        "tokens": {
          "attributes": undefined,
          "isEndTag": false,
          "tag": "u",
        },
        "type": "html",
      },
      {
        "raw": "underlined",
        "type": "text",
        "value": "underlined",
      },
      {
        "raw": "</u>",
        "tokens": {
          "attributes": undefined,
          "isEndTag": true,
          "tag": "u",
        },
        "type": "html",
      },
      {
        "raw": " text here",
        "type": "text",
        "value": " text here",
      },
    ],
    "type": "paragraph",
    "value": "this is a <u>underlined</u> text here",
  },
  {
    "type": "new-line",
  },
]
`;

exports[`paragraph should ignore the escaped special characters 1`] = `
[
  {
    "indent": 0,
    "raw": "this is \\[google] link",
    "tokens": [
      {
        "raw": "this is \\[google] link",
        "type": "text",
        "value": "this is \\[google] link",
      },
    ],
    "type": "paragraph",
    "value": "this is \\[google] link",
  },
  {
    "type": "new-line",
  },
  {
    "indent": 0,
    "raw": "this is a normal \\* asterisk \\* here again",
    "tokens": [
      {
        "raw": "this is a normal \\* asterisk \\* here again",
        "type": "text",
        "value": "this is a normal \\* asterisk \\* here again",
      },
    ],
    "type": "paragraph",
    "value": "this is a normal \\* asterisk \\* here again",
  },
]
`;

exports[`paragraph should merge consecutive paragraph not separated by other tokens 1`] = `
[
  {
    "indent": 0,
    "raw": "abc \`def\` *ghi
jkl* mno **pqr*** stu",
    "tokens": [
      {
        "raw": "abc ",
        "type": "text",
        "value": "abc ",
      },
      {
        "raw": "\`def\`",
        "type": "code",
        "value": "def",
      },
      {
        "raw": " ",
        "type": "text",
        "value": " ",
      },
      {
        "raw": "*ghi jkl*",
        "tokens": [
          {
            "raw": "ghi jkl",
            "type": "text",
            "value": "ghi jkl",
          },
        ],
        "type": "italic",
      },
      {
        "raw": " mno ",
        "type": "text",
        "value": " mno ",
      },
      {
        "raw": "**pqr**",
        "tokens": [
          {
            "raw": "pqr",
            "type": "text",
            "value": "pqr",
          },
        ],
        "type": "bold",
      },
      {
        "raw": "* stu",
        "type": "text",
        "value": "* stu",
      },
    ],
    "type": "paragraph",
    "value": "abc \`def\` *ghi jkl* mno **pqr*** stu",
  },
]
`;
